# self-summarization-agent

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
configs/eval/: compaction_comparison.yaml
configs/run/: default.yaml
configs/train/: default.yaml  no_compact_32k.yaml  openrlhf_agent.yaml
docs/: 2026-04-17-notion-design-note.md
docs/superpowers/plans/: 2026-04-18-self-summarization-agent-runtime.md  2026-04-22-vllm-grpo-training-implementation.md
docs/superpowers/specs/: 2026-04-17-self-summarization-agent-design.md  2026-04-22-vllm-grpo-training-design.md  2026-06-21-phase-scoped-retrieval-worker-design.md  2026-06-29-generated-token-budget-eval-design.md  2026-07-10-no-compact-32k-training-design.md
scripts/: analyze_sequence_lengths.py  plot_accuracy.py  plot_eval_metrics.py  plot_training_dynamics.py  probe_collection_prompt.py  probe_compaction_comparison.py  probe_vllm_collection.py  run_compaction_comparison.py  simulate_collection.py  train_openrlhf_agent.sh
src/self_summarization_agent/: backend.py  bcplus_backend.py  cache_step.py  checkpoints.py  cli.py  config.py  context.py  dataset.py  eval_metrics.py  export.py  generation.py  iteration_launcher.py  judge.py  judge_step.py  judge_worker.py  launcher_utils.py  models.py  openrlhf_agent.py  openrlhf_dataset.py  openrlhf_judge_server.py  prompts.py  retrieval_worker.py  rewards.py  rollout_collection.py  run_launcher.py  runtime.py  train_grpo.py  train_launcher.py  train_step.py  trainer.py  trajectory.py  verl_ray_trainer.py
src/self_summarization_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bcplus_backend.py  test_cache_step.py  test_checkpoints.py  test_compaction_comparison.py  test_config.py  test_context.py  test_eval_metrics.py  test_export.py  test_generation.py  test_generation_transformers.py  test_iteration_launcher.py  test_judge_step.py  test_launchers.py  test_openrlhf_agent.py  test_openrlhf_dataset.py  test_probe_compaction_comparison.py  test_prompts.py  test_rewards.py  test_rollout_collection.py  test_runtime.py  test_train_step.py  test_trainer.py  test_verl_ray_trainer.py
