[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-summarization-agent"
version = "0.1.0"
description = "Self-summarization runtime for BrowseComp-Plus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.0.0",
  "faiss-cpu>=1.13.2",
  "pyserini>=2.0.0",
  "PyYAML>=6.0.2",
  "tevatron>=0.1.0",
  "torch>=2.7.0",
  "transformers>=4.57.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
