[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-summarization-agent"
version = "0.1.0"
description = "Self-summarization runtime for BrowseComp-Plus"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "datasets>=4.0.0",
  "faiss-cpu>=1.13.2",
  "peft>=0.19.1",
  "pyserini>=1.4.0",
  "PyYAML>=6.0.2",
  "qwen-omni-utils>=0.0.9",
  "tevatron>=0.0.1",
  "torch",
  "transformers>=5.3",
  "accelerate>=1.13.0",
  "flash-attn",
  "verl @ https://github.com/verl-project/verl.git",
  "ray[default]>=2.40.0",
  "pytest>=9.0.3",
  "torchvision",
  "vllm>=0.19.1",
]

[tool.uv]
environments = [
  "sys_platform == 'linux'",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
tevatron = { git = "https://github.com/texttron/tevatron.git", rev = "main" }
vllm = { git = "https://github.com/vllm-project/vllm.git", tag = "v0.19.1" }

[tool.pytest.ini_options]
pythonpath = [".", "src"]

